@@ -3,33 +3,65 @@ package com.mtvs.flykidsbackend.config;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.servlet.config.annotation.CorsRegistry;
+import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
-import java.util.List;
+import java.util.Arrays;
+import java.util.Collections;
 
+/**
+ * CORS 설정 클래스
+ */
 @Configuration
-public class CorsConfig {
+public class CorsConfig implements WebMvcConfigurer {
 
+    @Override
+    public void addCorsMappings(CorsRegistry registry) {
+        registry.addMapping("/**")  // 모든 경로에 대해
+                .allowedOriginPatterns("*")  // 모든 도메인 허용
+                .allowedMethods("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH")  // 모든 HTTP 메소드 허용
+                .allowedHeaders("*")  // 모든 헤더 허용
+                .allowCredentials(true)  // 인증 정보 허용
+                .maxAge(3600);  // Preflight 요청 캐시 시간
+    }
+
+    /**
+     * Spring Security와 함께 사용할 CorsConfigurationSource Bean
+     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration config = new CorsConfiguration();
+        CorsConfiguration configuration = new CorsConfiguration();
 
-        // 허용할 출처(도메인)
-        config.setAllowedOriginPatterns(List.of("*")); // 모든 출처 허용 (테스트용)
+        // Unity에서 오는 모든 요청 허용
+        configuration.setAllowedOriginPatterns(Collections.singletonList("*"));
 
-        // 허용 HTTP 메서드
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        // 모든 HTTP 메소드 허용 (Unity에서 OPTIONS preflight 요청 포함)
+        configuration.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD"
+        ));
 
-        // 허용 헤더
-        config.setAllowedHeaders(List.of("*"));
+        // 모든 헤더 허용 (Unity의 특수 헤더들 포함)
+        configuration.setAllowedHeaders(Arrays.asList(
+                "*",  // 모든 헤더
+                "Content-Type",
+                "Authorization",
+                "X-Requested-With",
+                "Accept",
+                "Origin",
+                "Access-Control-Request-Method",
+                "Access-Control-Request-Headers"
+        ));
 
-        // 인증 정보 포함 여부
-        config.setAllowCredentials(true);
+        // 인증 정보 포함 허용
+        configuration.setAllowCredentials(true);
 
-        // CORS 설정을 모든 경로에 적용
+        // Preflight 요청 결과 캐시 시간 (1시간)
+        configuration.setMaxAge(3600L);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config);
+        source.registerCorsConfiguration("/**", configuration);
 
         return source;
     }
